--- a/commander_frontend/style.css
+++ b/commander_frontend/style.css
@@ -1,20 +1,18 @@
-
-import node_modules\bootstrap
-
 .container-main{
-    width: 100%;
-    height: 800px;
-    background-color: bisque;
-    display: relative;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
 }
 
 .formulario{
-    position: absolute;
+    display: flex;
+    flex-direction: column;
     background-color: white;
     width: 60%;
     padding: 30px;
-    border: 1px solid #ccc;
+    border: 5px solid #0cc925;
 }
 
 .formulario p{
@@ -24,27 +22,12 @@ import node_modules\bootstrap
     text-align: center;
 }
 
-.field{
+.field-date{
     width: 100%;
-    margin: 15px 0;
-    text-align: center;
-}
-
-.field-players{
-    width: 100%;
-    margin: 15px 0;
-    background-color:#ccc;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-.field label{
-    padding-left: 10px;
-    font-size: 1.1em;
-    display: block;
-    width: 100%;
-    font-family: 'Courier New', Courier, monospace;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center ;  
 }
 
 #date{
@@ -56,34 +39,34 @@ import node_modules\bootstrap
     border-radius: 15px;
     border: 1px solid #ccc;
     outline: none;
+    margin-left: 5px;
 }
 
-#name_player{
+.field-players{
+    margin: 15px 0;
+    background-color:#ccc;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+}
+
+#name-player{
     width: 30%;
     line-height: 0px;
     padding-left: 10px;
+    margin-left: 9px;    
     height: 30px;
     font-size: 0.9em;
     border-radius: 9px;
     border: 1px solid #161515;
+    outline: none;
 }
 
-input[type=submit]{
-    display: block;
-    background-color: #ccc;
-    height: 35px;
-    border: none;
-    outline: 0;
-    cursor: pointer;
-    width: 100px;
-    margin: 0 auto;
-    text-align: center;
-    border-radius: 15px;
-}
-
-input[type=submit]:hover{
-    background-color: #7e7e7e;
-    color: white;
+#name-player:focus{
+   border-color: #ff0101;
 }
 
 #icon-money,#icon-card{
@@ -91,39 +74,127 @@ input[type=submit]:hover{
     width: 30px;
 }
 
-
-.btn.btn-outline-primary{
-    border-color: #00ccff;
-}
-
 .name-items{
-    width: 15%;
+    width: 25%;
+    height: 30px;
     border: none;
     border-radius: 5px;
-    
+    margin-right: 10px;
+    margin-left: 5px;
 }
 
-ul.list-group{
+.field-list{
+    width: 55%;
     margin-top: 10px;
-    margin-bottom: 10px;
+}
+.list-products{
+    list-style: none;
+    padding: 0;
 }
 
-li.list-group-item{
-    display: block;
+.item-product{
     width: 100%;
     background-color: #ccc;
-    border: none;
+    display: flex;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+}
 
+.labels{
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 4px;
 }
 
 #add-item{
-    display: inline-block;
-    border: none;
-    background: none;
+    display: none;
 }
 
-#icon-add-item{
-    height: 20px;
-    width: 20px;
+.icon-add-item{
+    background-size: 100%;
+    margin-top: 30px;
+    background-repeat: no-repeat;
+    background-image: url("assets/sum.png");
+    height: 23px;
+    width: 23px;
 
+}
+
+.icon-add-item:hover{
+    background-image: url("assets/sumRed.png");
+    cursor: pointer;
+}
+
+
+.radio-btn{
+    display: none;
+}
+
+.label-radio{
+    margin-left: 10px;
+    display: flex;
+    background-color: #ffffff;
+    cursor: pointer;
+    width: 3em;
+    height: 2em;
+    justify-content: center;
+    border: 1px solid #161515;
+    border-radius: 2px;
+}
+
+.radio-btn:checked + .label-radio{
+    background-color: #868686;
+    transition: 0.3s ease-in-out;
+}
+
+
+#btn-add-player{
+    width: 20%;
+    background-color: rgb(163, 165, 30);
+    color: white;
+    border: 1px solid rgb(141, 143, 23);
+    border-radius: 5px;
+    padding: 2px;
+}
+
+#btn-add-player:hover{
+    background-color: rgb(134, 136, 23);
+    border-color: rgb(111, 112, 19);
+    transition: 0.2s ease-in-out;
+}
+
+#btn-send{
+    width: 30%;
+    height: 50px;
+    align-self: center;
+    background-color: rgb(163, 165, 30);
+    color: #ffffff;
+    border-radius: 10px;
+    border: 1px solid rgb(141, 143, 23);
+
+}
+
+#btn-send:hover{
+    background-color: rgb(139, 141, 35);
+    border-color: rgb(111, 112, 19);
+    transition: 0.3s ease-in-out;
+}
+
+.container-card{
+    width: 100%;
+    height: 400px;
+    border: 2px solid #000;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+    overflow: scroll;
+}
+
+.card{
+    width: 200px;
+    height: 100px;
+    background-color: #000;
+    border: 3px solid red;
+    margin-right: 5px;
 }
